fix(videoShowCard.scss): height suddenly jump when toggle week

--- a/src/components/base/videoShowCard/videoShowCard.scss
+++ b/src/components/base/videoShowCard/videoShowCard.scss
@@ -1,5 +1,6 @@
 .video-show-card-container {
   min-width: 210px;
+  height : 356px;
   color: var(--color-main);
 
   .img-wrapper {
